@@ -141,7 +141,7 @@ private:
   bool on_busy_action_pulse();
   void on_busy_action_cancel();
 
-  void on_info();
+  void on_about();
   void on_about_dialog_hide();
 
   void on_preferences();
